Prometheus/premetheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: prometheus
spec:
  type: NodePort
  selector:
    app: prometheus  # This should match the labels of the Prometheus pods
  ports:
  - port: 9090         # The target port Prometheus listens on
    targetPort: 9090   # The port on the Prometheus container
    nodePort: 30080    # You can specify a port in the range 30000-32767 or let Kubernetes assign one
    protocol: TCP
